<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.example.eric.tutorapp.StudentSearchActivity"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_alignParentTop="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/studentSearchToolbarTitle"
            />
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:inputType="textCapWords"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:hint="@string/nameHint"
        android:focusableInTouchMode="true"
        />

    <AutoCompleteTextView
        android:id="@+id/courseText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameText"
        android:paddingStart="12dp"
        android:inputType="text"
        android:textColor="@color/black"
        android:popupBackground="@color/light_grey"
        android:textColorHint="@color/grey"
        android:hint="@string/courseHint"
        android:focusableInTouchMode="true"
        />

    <EditText
        android:id="@+id/priceText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/courseText"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:hint="@string/priceHint"
        android:focusableInTouchMode="true"
        />

    <EditText
        android:id="@+id/buildingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priceText"
        android:inputType="textCapSentences"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:hint="@string/buildingHint"
        android:focusableInTouchMode="true"
        />

    <TextView
        android:id="@+id/messageBoxTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buildingText"
        android:layout_marginTop="10dp"
        android:text="@string/messageBoxTitle"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        />

    <EditText
        android:id="@+id/notesText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/messageBoxTitle"
        android:inputType="textMultiLine|textCapSentences"
        android:lines="5"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:hint="@string/notesHint"
        android:background="@drawable/edit_text_bordered"
        android:focusableInTouchMode="true"
        android:layout_margin="8dp"
        android:padding="5dp"
        />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/searchButtonText"
        android:textAllCaps="true"
        />


</RelativeLayout>
