<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.eric.tutorapp.HomeActivity"
    android:weightSum="1">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".6"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/tutor_icon"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/logoDescr" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4">

        <TextView
            android:id="@+id/continueAsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/continueText"
            android:textAllCaps="true"
            android:textSize="24sp"
            />

        <Button
            android:id="@+id/studentButton"
            android:text="@string/studentText"
            android:layout_below="@+id/continueAsText"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            style="@style/BottomButton"
            />

        <Button
            android:id="@+id/tutorButton"
            android:text="@string/tutorText"
            android:layout_below="@+id/studentButton"
            style="@style/BottomButton"
            />
    </RelativeLayout>
</LinearLayout>
