<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical"
              tools:context="com.example.eric.tutorapp.AvailableTutorsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolBar">

        <TextView
            style="@style/ToolBarText"
            android:text="@string/availableTutorsToolbarTitle"
            />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/pendingTutors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:gravity="center"
        android:paddingTop="2dp"
        android:text="@string/pendingTutorsText"
        android:textColor="@color/black"
        />

    <ListView
        android:id="@+id/availableTutors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/loadingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/loadingText"
        />

</LinearLayout>
