<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.eric.tutorapp.RateActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolBar"
        >

        <TextView
            android:id="@+id/toolbarText"
            style="@style/ToolBarText"
            android:text="Test"
            />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/ratingBarLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:stepSize="1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/reviewTextLabel"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/reviewText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="5"
            android:gravity="top|start"
            android:hint="@string/reviewTextHint"
            android:textColorHint="@color/grey"
            android:background="@drawable/edit_text_bordered"
            android:padding="5dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        style="@style/BottomButton"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/submitRatingText"
        />

</RelativeLayout>
